# engine-test

./: .clang-format  .clang-tidy  .clangd  .clangd-linux  .clangd-windows  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  Flags spec.md  README.md  STATUS.md  VCPKG_BOOTSTRAP_STATUS.md  VCPKG_INTEGRATION_SUMMARY.md  VCPKG_SETUP.md  compile_commands.json  dawd.json  deprecated_newMain.cpp  deprecated_newVersion.cpp  dummy.cpp  frag.spv  main.cpp  newMain.cpp  newVersion.cpp  notes.md  old-clang-format  package-lock.json  run-engine.sh  src_structure.txt  structure.ps1  structure.txt  vcpkg.json
.claude/skills/cpp-guidelines/: SKILL.md
.claude/skills/main-guidelines/: SKILL.md
.copilot/: todos.md
.zed/: settings.json
cmake/: bootstrap-vcpkg.cmake
cmake/toolchains/: clang-linux.cmake  clang-windows.cmake
cmake/triplets/: x64-linux-clang-my.cmake  x64-linux-clang.cmake  x64-windows-clang-msys.cmake
docs/: gltf_v2_spec.md  tinygltf_v3.md  vulkan_extensions_reference.md  vulkan_integration_playbook.md
models/: room.gltf  viking_room_UASTC.ktx2
scripts/: setup-toolchain.ps1
shaders/: frag.slang  vert.slang
shaders/base/: shader.frag  shader.slang  shader.vert
src/: CMakeLists.txt  Constants.h  main.cpp  pch.h
src/assets/: CMakeLists.txt  assets_loader.cpp  assets_loader.hpp  model_storage.cpp  model_storage.hpp  object_storage.cpp  object_storage.hpp  texture_manager.cpp  texture_manager.hpp
src/core/: Application.cpp  Application.h  CMakeLists.txt  Types.h  Utils.h  main.cpp  object_storage.cpp  object_storage.hpp  texture_manager.cpp  texture_manager.hpp  types.hpp  vk_allocator.hpp  vk_descriptors.cpp  vk_descriptors.hpp  vk_device.cpp  vk_device.hpp  vk_engine.cpp  vk_engine.hpp  vk_resource_manager.cpp  vk_resource_manager.hpp  vk_swapchain.cpp  vk_swapchain.hpp
src/graphics/: DescriptorManager.cpp  DescriptorManager.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  SwapChain.cpp  SwapChain.h  VulkanContext.cpp  VulkanContext.h
src/postprocessing/: CMakeLists.txt
src/render/: CMakeLists.txt  push_data.hpp  vk_pipeline.cpp  vk_pipeline.hpp  vk_renderer.cpp  vk_renderer.hpp
src/resources/: AssetsLoader.cpp  AssetsLoader.h  ResourceManager.cpp  ResourceManager.h  TextureManager.cpp  TextureManager.h
src/scene/: CMakeLists.txt  vk_scene.hpp
src/static_headers/: logger.cpp
src/util/: CMakeLists.txt  debug.cpp  debug.hpp  logger.cpp  logger.hpp  tracy.cpp  tracy.h  vk_tracy.cpp  vk_tracy.hpp  vk_utils.cpp  vk_utils.hpp
src2/: main.cpp
src2/assets/: assets_loader.cpp  assets_loader.hpp  texture_manager.cpp  texture_manager.hpp
src2/core/: types.hpp  vk_descriptors.cpp  vk_descriptors.hpp  vk_device.cpp  vk_device.hpp  vk_engine.cpp  vk_engine.hpp  vk_resource_manager.cpp  vk_swapchain.cpp  vk_swapchain.hpp
src2/render/: vk_pipeline.cpp  vk_pipeline.hpp  vk_renderer.cpp  vk_renderer.hpp
